<?xml version="1.0"?>
<package format="2">
  <name>imu_bridge_ros1</name>
  <version>0.0.1</version>
  <description>Bridge PX4 HighresIMU from ROS2 via Unix socket to ROS1</description>
  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

</package>
